[tool.poetry]
name = "burst_explorer"
version = "1.7.0"
description = "BurstCoin Blockchain Explorer"
authors = ["Lev Lybin <lev.lybin@gmail.com>"]
license = "GPL-3.0"
homepage = "https://burstscan.net"
repository = "https://github.com/llybin/burst_explorer"

[tool.poetry.dependencies]
python = "^3.8"
celery = {version = "4.4.7", extras = ["redis"]}
django = "3.1"
django-cache-memoize = "0.1.7"
django-cors-headers = "3.5.0"
django-filter = "2.3.0"
django-redis = "4.12.1"
djangorestframework = "3.11.1"
gunicorn = "20.0.4"
jsonschema = "3.2.0"
mysqlclient = "2.0.1"
pycoingecko = "1.3.0"
python-redis-lock = {version = "3.6.0", extras = ["django"]}
requests = {version = "2.24.0", extras = ["security"]}
sentry-sdk = "0.17.1"
simplejson = "3.17.2"
supervisor = "4.2.1"
whitenoise = "5.2.0"

[tool.poetry.dev-dependencies]
coverage = "^5.2.1"
django-debug-toolbar = "^2.2"
freezegun = "^0.3.15"
ipython = "^7.18.0"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-django = "^3.9.0"
pytest-recording = "^0.9.0"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
line_length = 88
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
skip_glob = [
    "java_wallet/models.py",
    "java_wallet/models_new.py",
    "java_wallet/migrations/0001_initial.py",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
  )/
  | java_wallet/models.py
  | java_wallet/models_new.py
  | java_wallet/migrations/0001_initial.py
)
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "-ra --cache-clear --no-cov-on-fail --cov-report=term --cov-report xml:coverage.xml"
console_output_style = "count"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

